fix icons being inivisble on mobile

--- a/html/assets/css/page/indexPage.css
+++ b/html/assets/css/page/indexPage.css
@@ -209,6 +209,7 @@ form {
     }
 
     .notificationBtn {
+        top: 20px;
         right: 15px;
     }
 
